💄 🩹 fix main page box overflow

--- a/webapp/main.style.css
+++ b/webapp/main.style.css
@@ -113,6 +113,7 @@ footer {
   
 .container {
     margin: 10px 0;
+    overflow: hidden;
 }
 
 .content small {
